# 2_semester

./: .gitignore
labs/1_lab/: CMakeLists.txt  main.cpp
labs/1_lab/inc/: animation.h
labs/1_lab/src/: animation.cpp
labs/3_lab/: CMakeLists.txt  main.cpp
labs/4_lab/: CMakeLists.txt  main.cpp
labs/4_lab/inc/: matrix.h
labs/6_lab/: CMakeLists.txt  main.cpp
labs/6_lab/inc/: logger.h
labs/7_lab/: CMakeLists.txt  main.cpp
labs/7_lab/inc/: shape.h
labs/8_lab/: CMakeLists.txt  main.cpp  stack.h
